// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksVisualizationToggle render with disabled message 1`] = `
<DocumentFragment>
  <div
    class="visual-helper"
  >
    <div
      class="visual-helper-text"
    >
      Visual helper
    </div>
    <div
      aria-hidden="true"
    >
      <mock-visualizationtoggle
        checked="false"
        classname="visual-helper-toggle"
        data-automation-id="visual-helper-toggle"
        disabled="true"
        visualizationname="Visual helper"
      />
    </div>
    <span
      class="no-matching-elements"
    >
      No matching/failing instances were found
    </span>
  </div>
</DocumentFragment>
`;

exports[`AutomatedChecksVisualizationToggle render: toggle disabled when there are no failing instances for automated checks 1`] = `
<DocumentFragment>
  <div
    class="visual-helper"
  >
    <div
      class="visual-helper-text"
    >
      Visual helper
    </div>
    <div
      aria-hidden="true"
    >
      <mock-visualizationtoggle
        checked="false"
        classname="visual-helper-toggle"
        data-automation-id="visual-helper-toggle"
        disabled="true"
        visualizationname="Visual helper"
      />
    </div>
    <span
      class="no-matching-elements"
    >
      No matching/failing instances were found
    </span>
  </div>
</DocumentFragment>
`;

exports[`AutomatedChecksVisualizationToggle render: toggle not disabled 1`] = `
<DocumentFragment>
  <div
    class="visual-helper"
  >
    <div
      class="visual-helper-text"
    >
      Visual helper
    </div>
    <div
      aria-hidden="false"
    >
      <mock-visualizationtoggle
        checked="false"
        classname="visual-helper-toggle"
        data-automation-id="visual-helper-toggle"
        disabled="false"
        visualizationname="Visual helper"
      />
    </div>
  </div>
</DocumentFragment>
`;
